--- a/meta/main.yml
+++ b/meta/main.yml
@@ -23,7 +23,7 @@ galaxy_info:
   # platform on this list, let us know and we'll get it added!
   #
   platforms:
-  - name: Arch
+  - name: Archlinux
     versions:
     - all
   - name: EL
