--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,7 +8,7 @@ galaxy_info:
 
   license: BSD
 
-  min_ansible_version: 1.0
+  min_ansible_version: 2.0
 
   # Optionally specify the branch Galaxy will use when accessing the GitHub
   # repo for this role. During role install, if no tags are available,
@@ -59,7 +59,8 @@ galaxy_info:
     - ubuntu
     - debian
 
-dependencies: []
+dependencies:
+  - abaez.docker
   # List your role dependencies here, one per line.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
